<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:baselineAligned="false" >
        <EditText
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/height"
            android:inputType="numberDecimal" />
        <!-- 得到身高 -->

        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/weight"
            android:inputType="numberDecimal" />
        <!-- 得到体重 -->
   

        <EditText
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/sex"
            android:inputType="text" />

        <TableRow>
        <Button
            android:id="@+id/btn_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cal" />
		<Button 
		    android:id="@+id/btn_share"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/btn_share" />
		</TableRow>

    <TextView
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FFFF00" />

    <TextView
        android:id="@+id/suggest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FFFF00" />

</TableLayout>